[#88980240]Update build number to 150224-0755
[#88980240]

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ faraday.log
 .dat*
 .repl_history
 build/
+install.sh
+.gitignore
+.idea/
+.v2gpti/
+.ruby-version
 
 ## Documentation cache and generated files:
 /.yardoc/
