--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /test/version_tmp/
 /tmp/
 faraday.log
+
 ## Specific to RubyMotion:
 .dat*
 .repl_history
@@ -31,6 +32,7 @@ build/
 Gemfile.lock
 .ruby-version
 .ruby-gemset
+.v2gpti/**
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
